@@ -1,3 +1,14 @@
+2013-10-19  Michael Stahl  <mstahl@redhat.com>
+
+	* elf/rtld.c (do_preload): Print the reason why preloading failed.
+
+2013-10-19  Ondřej Bílka  <neleai@seznam.cz>
+
+	BZ #10278]
+	* posix/glob.c: Match only directories when trailing slash is present.
+	* posix/tst-gnuglob.c (my_opendir): Do not open files.
+	(main): Add testcase.
+
 2013-10-19  Ondřej Bílka  <neleai@seznam.cz>
 
 	[BZ #15670]
